--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,9 @@ __pycache__/
 build/
 dist/
 test*
+docker/static/
+docker/templates/
+docker/*.py
+pyinstaller/__pycache__/
+pyinstaller/dist/
+pyinstaller/*.py
