--- a/go-client/Makefile
+++ b/go-client/Makefile
@@ -16,21 +16,21 @@ build:
 #	docker run -v $(pwd):/src -w /src -it --rm  linuturk/mono-choco new kubectl-login
 
 package:
-	mkdir -p dist/release
-	cd dist/linux; \
+#	mkdir -p dist/release
+#	cd dist/linux; \
 	chmod +x kubectl-login; \
 	tar -czf kubectl-login_linux.tar.gz kubectl-login
-	CHECKSUM=$$(sha256sum dist/linux/kubectl-login_linux.tar.gz | cut -d ' ' -f1); \
+#	CHECKSUM=$$(sha256sum dist/linux/kubectl-login_linux.tar.gz | cut -d ' ' -f1); \
 	sed -i "s/#checksum_linux#/$$CHECKSUM/" dist/homebrew/kubectl-login.rb; \
 	sed -i "s/#version#/${VERSION}/" dist/homebrew/kubectl-login.rb
 
-	cd dist/osx; \
+#	cd dist/osx; \
 	chmod +x kubectl-login; \
 	tar -czf kubectl-login_osx.tar.gz kubectl-login
-	CHECKSUM=$$(sha256sum dist/osx/kubectl-login_osx.tar.gz | cut -d ' ' -f1); \
-	sed -i "s/#checksum_osx#/$$CHECKSUM/" dist/homebrew/kubectl-login.rb
+#	CHECKSUM=$$(sha256sum dist/osx/kubectl-login_osx.tar.gz | cut -d ' ' -f1); \
+#	sed -i "s/#checksum_osx#/$$CHECKSUM/" dist/homebrew/kubectl-login.rb
 
-	cd dist/windows; \
+#	cd dist/windows; \
 	zip kubectl-login_windows.zip kubectl-login.exe
 
 	CHECKSUM=$$(sha256sum dist/windows/kubectl-login_windows.zip | cut -d ' ' -f1); \
@@ -42,10 +42,11 @@ package:
 	rm -f dist/choco/tools/kubectl-login_windows.zip
 
 release:
-	mv dist/windows/kubectl-login_windows.zip dist/release/
-	mv dist/linux/kubectl-login_linux.tar.gz dist/release/
-	mv dist/osx/kubectl-login_osx.tar.gz dist/release/
-	mv dist/choco/kubectl-login*.nupkg dist/release/
-	gh release create client_v${VERSION} --generate-notes ./dist/release/*
-	rm -rf dist/{windows,linux,osx,release}
+#	mv dist/windows/kubectl-login_windows.zip dist/release/
+#	mv dist/linux/kubectl-login_linux.tar.gz dist/release/
+#	mv dist/osx/kubectl-login_osx.tar.gz dist/release/
+#	mv dist/choco/kubectl-login*.nupkg dist/release/
+#	gh release create client_v${VERSION} --generate-notes ./dist/release/*
+	docker run -v `pwd`/dist/choco/:/src -w /src -it --rm  linuturk/mono-choco push kubectl-login.${VERSION}.nupkg --key ${CHOCO_TOKEN} --source https://push.chocolatey.org/
+#	rm -rf dist/{windows,linux,osx,release}
 
