test go-client makefile

--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,9 @@ py-client/pyinstaller/__pycache__/
 py-client/pyinstaller/dist/
 py-client/pyinstaller/*.py
 py-client/!pyinstaller/kubectl-login.spec
+
+# go-client
+go-client/dist/release/
+go-client/homebrew-devopstales/
+go-client/krew-index/
+
