--- a/go-client/Makefile
+++ b/go-client/Makefile
@@ -27,7 +27,7 @@ package:
 	cd dist/linux; \
 	chmod +x kubectl-login; \
 	tar -czf kubectl-login_linux.tar.gz kubectl-login; \
-	sha256sum dist/linux/kubectl-login_linux.tar.gz > dist/linux/kubectl-login_linux.tar.gz.sha256
+	sha256sum kubectl-login_linux.tar.gz > kubectl-login_linux.tar.gz.sha256
 
 	CHECKSUM=$$(sha256sum dist/linux/kubectl-login_linux.tar.gz | cut -d ' ' -f1); \
 	sed -i "s/#checksum_linux#/$$CHECKSUM/" dist/homebrew/kubectl-login.rb; \
@@ -38,7 +38,7 @@ package:
 	cd dist/osx; \
 	chmod +x kubectl-login; \
 	tar -czf kubectl-login_osx.tar.gz kubectl-login; \
-	sha256sum dist/linux/kubectl-login_osx.tar.gz > dist/linux/kubectl-login_osx.tar.gz.sha256
+	sha256sum kubectl-login_osx.tar.gz > kubectl-login_osx.tar.gz.sha256
 
 	CHECKSUM=$$(sha256sum dist/osx/kubectl-login_osx.tar.gz | cut -d ' ' -f1); \
 	sed -i "s/#checksum_osx#/$$CHECKSUM/" dist/homebrew/kubectl-login.rb; \
@@ -46,10 +46,10 @@ package:
 
 	cd dist/windows; \
 	zip kubectl-login_windows.zip kubectl-login.exe; \
-	sha256sum dist/linux/kubectl-login_windows.zip > dist/linux/kubectl-login_windows.zip.sha256
+	sha256sum kubectl-login_windows.zip > kubectl-login_windows.zip.sha256
 
 	CHECKSUM=$$(sha256sum dist/windows/kubectl-login_windows.zip | cut -d ' ' -f1); \
-	ed -i "s/#checksum_windows#/$$CHECKSUM/" dist/krew/openid-connect.yaml; \
+	sed -i "s/#checksum_windows#/$$CHECKSUM/" dist/krew/openid-connect.yaml; \
 	sed -i "s/#checksum#/$$CHECKSUM/" dist/choco/tools/VERIFICATION.txt; \
 	sed -i "s/#version#/${VERSION}/" dist/choco/tools/VERIFICATION.txt; \
 	sed -i "s/#version#/${VERSION}/" dist/choco/kubectl-login.nuspec
@@ -59,36 +59,49 @@ package:
 
 #release: @ Create release on github and publish choco package
 release:
-	@echo "🤖 CD bot is DReleasing
-
 	mv dist/windows/kubectl-login_windows.zip* dist/release/
 	mv dist/linux/kubectl-login_linux.tar.gz* dist/release/
 	mv dist/osx/kubectl-login_osx.tar.gz* dist/release/
 	mv dist/choco/kubectl-login*.nupkg dist/release/
+	@echo "🤖 CD bot is Releasing to GitHub"
 	gh release create client_v${VERSION} --generate-notes ./dist/release/*
 
 #	docker run -v `pwd`/dist/choco/:/src -w /src -it --rm  linuturk/mono-choco push kubectl-login.${VERSION}.nupkg --key ${CHOCO_TOKEN} --source https://push.chocolatey.org/
 
+	@echo "⬇️ Git checkout: homebrew-devopstales"
 	git clone git@github.com:devopstales/homebrew-devopstales.git; \
 	cd homebrew-devopstales; \
 	git config user.name "devopstales"; \
 	git config user.email "42894256+devopstales@users.noreply.github.com"; \
 	rm -f kubectl-login.rb; \
 	cp ../dist/homebrew/kubectl-login.rb .; \
-	git add kubectl-login.rb && git commit -m "release ${VERSION}"; \
+	git add kubectl-login.rb; \
+	git commit -m "release ${VERSION}"; \
 	git push
+	@echo "⬆️ Git push: homebrew-devopstales"
 
+	@echo "⬇️ Git checkout: krew-index"
 	git clone git@github.com:devopstales/krew-index.git; \
 	cd krew-index/plugins; \
 	git config user.name "devopstales"; \
 	git config user.email "42894256+devopstales@users.noreply.github.com"; \
 	rm -f openid-connect.yaml; \
-	cp ../../dist/krew/openid-connect.yaml; \
-	git add openid-connect.yaml && git commit -m "release ${VERSION}"; \
+	cp ../../dist/krew/openid-connect.yaml .; \
+	git add openid-connect.yaml; \
+	git commit -m "release ${VERSION}"; \
 	git push
+	@echo "⬆️ Git push: krew-index"
 
-#	rm -rf dist/{windows,linux,osx,release}
-#	rm -rf homebrew-devopstales
-#	rm -rf krew-index
-	@echo "🚀 Packages are deployed!"
+	@echo "🗑️ Cleaning repositoris"
+	rm -rf dist/{windows,linux,osx,release}
+	rm -f  dist/choco/kubectl-login.*.nupkg
+	rm -rf homebrew-devopstales
+	rm -rf krew-index
+
+	@echo "🗑️ Cleaning git changes"
+	git stash -- dist/choco/kubectl-login.nuspec
+	git stash -- dist/choco/tools/VERIFICATION.txt
+	git stash -- dist/homebrew/kubectl-login.rb
+	git stash -- dist/krew/openid-connect.yaml
+	@echo "🚀 Packages are deployed! 🎉"
 
