change openid-connect to dtlogin

--- a/go-client/Makefile
+++ b/go-client/Makefile
@@ -34,8 +34,8 @@ package:
 	CHECKSUM=$$(sha256sum dist/linux/kubectl-login_linux.tar.gz | cut -d ' ' -f1); \
 	sed -i "s/#checksum_linux#/$$CHECKSUM/" dist/homebrew/kubectl-login.rb; \
 	sed -i "s/#version#/${VERSION}/" dist/homebrew/kubectl-login.rb; \
-	sed -i "s/#checksum_linux#/$$CHECKSUM/" dist/krew-main/openid-connect.yaml; \
-	sed -i "s/#version#/${VERSION}/" dist/krew-main/openid-connect.yaml; \
+	sed -i "s/#checksum_linux#/$$CHECKSUM/" dist/krew-main/dtlogin.yaml; \
+	sed -i "s/#version#/${VERSION}/" dist/krew-main/dtlogin.yaml; \
 	sed -i "s/#checksum_linux#/$$CHECKSUM/" dist/krew/login.yaml; \
 	sed -i "s/#version#/${VERSION}/" dist/krew/login.yaml;
 
@@ -47,7 +47,7 @@ package:
 
 	CHECKSUM=$$(sha256sum dist/osx/kubectl-login_osx.tar.gz | cut -d ' ' -f1); \
 	sed -i "s/#checksum_osx#/$$CHECKSUM/" dist/homebrew/kubectl-login.rb; \
-	sed -i "s/#checksum_osx#/$$CHECKSUM/" dist/krew-main/openid-connect.yaml; \
+	sed -i "s/#checksum_osx#/$$CHECKSUM/" dist/krew-main/dtlogin.yaml; \
 	sed -i "s/#checksum_osx#/$$CHECKSUM/" dist/krew/login.yaml
 
 	cd dist/windows; \
@@ -56,7 +56,7 @@ package:
 	sha256sum kubectl-login_windows.zip > kubectl-login_windows.zip.sha256
 
 	CHECKSUM=$$(sha256sum dist/windows/kubectl-login_windows.zip | cut -d ' ' -f1); \
-	sed -i "s/#checksum_windows#/$$CHECKSUM/" dist/krew-main/openid-connect.yaml; \
+	sed -i "s/#checksum_windows#/$$CHECKSUM/" dist/krew-main/dtlogin.yaml; \
 	sed -i "s/#checksum_windows#/$$CHECKSUM/" dist/krew/login.yaml; \
 	sed -i "s/#checksum#/$$CHECKSUM/" dist/choco/tools/VERIFICATION.txt; \
 	sed -i "s/#version#/${VERSION}/" dist/choco/tools/VERIFICATION.txt; \
@@ -91,9 +91,9 @@ release:
 	cd krew-index/plugins; \
 	git config user.name "devopstales"; \
 	git config user.email "42894256+devopstales@users.noreply.github.com"; \
-	rm -f openid-connect.yaml; \
-	cp ../../dist/krew-main/openid-connect.yaml .; \
-	git add openid-connect.yaml; \
+	rm -f dtlogin.yaml; \
+	cp ../../dist/krew-main/dtlogin.yaml .; \
+	git add dtlogin.yaml; \
 	git commit -m "release ${VERSION}"; \
 	git push
 	@echo "⬆️ Git push: krew-index"
@@ -120,7 +120,7 @@ release:
 	git stash -- dist/choco/kubectl-login.nuspec
 	git stash -- dist/choco/tools/VERIFICATION.txt
 	git stash -- dist/homebrew/kubectl-login.rb
-	git stash -- dist/krew-main/openid-connect.yaml
+	git stash -- dist/krew-main/dtlogin.yaml
 	@echo "🚀 Packages are deployed! 🎉"
 
 #release-choco: @ Publish choco package
